@@ -17,6 +17,9 @@
    - stevesk@cvs.openbsd.org 2008/12/09 22:37:33
      [clientloop.c]
      fix typo in error message
+   - stevesk@cvs.openbsd.org 2008/12/10 03:55:20
+     [addrmatch.c]
+     o cannot be NULL here but use xfree() to be consistent; ok djm@
 
 20090107
  - (djm) [uidswap.c] bz#1412: Support >16 supplemental groups in OS X.
@@ -5026,5 +5029,5 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5164 2009/01/28 05:15:30 djm Exp $
+$Id: ChangeLog,v 1.5165 2009/01/28 05:16:00 djm Exp $
 
